# imodels-agentic

./: .gitignore  claude.md  interpretable_regressor.py  model.py  prepare.py  program.md  pyproject.toml  readme.md  run_baselines.py  train.py
e2e_experiments/: 01_blade_with_tools.md
e2e_experiments/blade-evaluation/: evaluate.py  prepare_run.py  report.md  report_comparison.md  results.csv  run_all.sh  run_analysis.py
e2e_experiments/blade-evaluation-claude/: prepare_run.py  report_comparison.md  run_all.sh
e2e_experiments/blade-evaluation-codex/: evaluate.py  prepare_run.py  report_comparison.md  run_all.sh
eval/: interp_eval.py  performance.py  performance_eval.py  plot_overall_results.py  visualize.py
evolve/: interpretable_regressor.py  program.md  readme.md  run_baselines.py
evolve-codex/src/: performance_eval.py
evolve/results/: interpretability_results.csv  performance_results.csv
generalization_experiments/: 00_set_up_generalization.md  evaluate_new_generalization_claude_haiku.py
generalization_experiments/new_results_claude_haiku/: interpretability_results_claude_haiku.csv  overall_results_claude_haiku.csv
result_libs/apr13-claude-effort=high/: interpretability_results.csv  overall_results.csv
result_libs/apr14-claude-effort=medium_gpt_5.4-evaluator/: overall_results.csv  performance_results.csv
result_libs/apr14-gpt_5.4-evaluator/: interpretability_results.csv
result_libs/apr17-claude-4.7-effort=xhigh/: interpretability_results.csv  overall_results.csv
results/: overall_results.csv
src/: performance_eval.py  visualize.py
(+697 files in other folders)
