[project]
name = "imodels-evolve"
version = "0.1.0"
description = "Autonomous research on interpretable scikit-learn classifiers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=1.24.0",
    "openml>=0.14.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
]
